# web_drive

./: UI.py  UI.ui  main.py  main.spec  main1.spec  pyproject.toml  test.py
